[build-system]
requires = [
    "hatchling>=1.29.0"
]
build-backend = "hatchling.build"

[project]
name = "pypomes_db"
version = "2.9.8"
authors = [
  { name="GT Nunes", email="wisecoder01@gmail.com" }
]
description = "A collection of Python pomes, penyeach (database modules)"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pypomes_core>=3.1.0",
#   "google-cloud-spanner>=3.63.0",
#   "mysql-connector-python>=9.6.0"
#   "oracledb>=3.4.2"
#   "psycopg2-binary>=2.9.11"
#   "pyodbc>=5.3.0"
]
[project.urls]
"Homepage" = "https://github.com/TheWiseCoder/PyPomes-DB"
"Bug Tracker" = "https://github.com/TheWiseCoder/PyPomes-DB/issues"
